--- a/ned/doc/ned.dox
+++ b/ned/doc/ned.dox
@@ -152,31 +152,44 @@ can be done like this:
 
 \todo Write more documentation for application startup via Ned
 
+\subsection l4re_ned_interactive Using the interactive ned prompt
+
+Ned can be used in interactive mode by connecting the small ned-prompt helper
+tool to the command capability. Add the following code snippet at the end of
+your ned script:
+
+\code{.lua}
+local L4 = require("L4");
+local l = L4.default_loader;
+
+cmd = l:new_channel()
+
+l:start({caps = {log = L4.Env.log, svr = cmd}}, "rom/ned-prompt")
+
+L4.server_loop(cmd)
+\endcode
+
+The script hands in ned's own log capability to `ned-prompt`. This ensures that
+input and output of ned and the prompt appear on the same console.
+
+`ned-prompt` needs to be added to your modules list.
+
 \section l4re_ned_options Command Line Options
 
 Ned's command line syntax is:
 
-    [--interactive|-i] [--cmdcap|-c CAP] [--noexit] [--execute|-e STATEMENT] <lua script> [options passed to lua script]
+    [--cmdcap|-c CAP] [--noexit] [--execute|-e STATEMENT] <lua script> [options passed to lua script]
 
 Ned interprets the first non-option argument `<lua script>` as the Lua script
 which it should load and run. All arguments following the first non-option
 argument are passed as arguments to the Lua script via Lua's global `arg`
 table.
 
-- Interactive Option: **interactive**, **i**
-
-  Start ned in interactive mode. After running the initial lua script,
-  ned will present a prompt, where Lua statements can be typed in interactively.
-
-  Must not be used together with server mode (-c).
-
 - Command Capability Option: **cmdcap**, **c**
 
   Start ned in server mode. After running the initial Lua script, ned will
   accept Lua statements via IPC on the given capability
   (see L4Re::Ned::Cmd_control).
-
-  Must not be used together with interactive mode (-i).
 
 - No exit Option: **noexit**
 
