Remove LEGAL files
The LEGAL files are superseeded by the more detailled and up to date
LICENSE.spdx file.

Change-Id: If7f1122c14457d06981167274f4a5bd5d3434c94

--- a/l4sys/doc/l4sys-l4f-groups.dox
+++ b/l4sys/doc/l4sys-l4f-groups.dox
@@ -1,6 +1,12 @@
 // vi:ft=c
 /* -*- c -*- */
 
+/* SPDX-License-Identifier: GPL-2.0-only or License-Ref-kk-custom */
+/*
+ * Copyright (C) 2009-2010 Technische Universität Dresden.
+ * Copyright (C) 2015-2020 Kernkonzept GmbH.
+ */
+
 /**
  * \defgroup l4_api Base API
  * \brief Interfaces for all kinds of base functionality.
